-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 13
-
Component/s: hotspot
-
b18
-
ppc
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8226217 | 11.0.5 | Matthias Baesken | P3 | Resolved | Fixed | b01 |
On AIX we usually run in virtualized environments (PowerVM / LPAR ).
It is helpful, for instance in support cases, to get some information about the virtualized environment in the hs_error file .
The information can be retrieved by using the libperfstat API .
It is helpful, for instance in support cases, to get some information about the virtualized environment in the hs_error file .
The information can be retrieved by using the libperfstat API .
- backported by
-
JDK-8226217 Provide virtualization related info in the hs_error file on AIX
-
- Resolved
-