8222280: Provide virtualization related info in the hs_error file on AIX

Reviewed-by: clanger, mdoerr